syntax = "proto2";

option java_outer_classname = "GossipProtos";
option java_package = "com.distributed.systems";

message Gossip {
    optional string GossipMessage = 1;
    optional int32 GossipSourceID = 2;
    optional int32 GossipSourceClock = 3;
}
